--- a/ImageFeed/Base.lproj/LaunchScreen.storyboard
+++ b/ImageFeed/Base.lproj/LaunchScreen.storyboard
@@ -15,24 +15,27 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="Vector.png" translatesAutoresizingMaskIntoConstraints="NO" id="Inp-pa-DHu">
-                                <rect key="frame" x="159" y="387" width="75" height="78"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Vector" translatesAutoresizingMaskIntoConstraints="NO" id="CIx-iM-Gv4">
+                                <rect key="frame" x="159" y="399.66666666666669" width="75" height="78"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="CIx-iM-Gv4" secondAttribute="height" multiplier="75:77.68" id="meo-iP-nv0"/>
+                                </constraints>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" red="0.10196078431372549" green="0.10588235294117647" blue="0.13333333333333333" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="Inp-pa-DHu" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="bZf-t7-33U"/>
-                            <constraint firstItem="Inp-pa-DHu" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="gcd-eO-vV7"/>
+                            <constraint firstItem="CIx-iM-Gv4" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="5J5-kz-31F"/>
+                            <constraint firstItem="CIx-iM-Gv4" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="E4H-lW-DeX"/>
                         </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="52.671755725190835" y="374.64788732394368"/>
         </scene>
     </scenes>
     <resources>
-        <image name="Vector.png" width="75" height="78"/>
+        <image name="Vector" width="75" height="78"/>
     </resources>
 </document>
