added auth VC and web view VC

--- a/ImageFeed/Main.storyboard
+++ b/ImageFeed/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="6ku-th-TDf">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="oe8-fT-RST">
     <device id="retina6_72" orientation="portrait" appearance="dark"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22685"/>
@@ -9,6 +9,106 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--Navigation Controller-->
+        <scene sceneID="efn-oh-354">
+            <objects>
+                <navigationController id="oe8-fT-RST" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="9wt-QA-I7K">
+                        <rect key="frame" x="0.0" y="59" width="430" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="I7h-uV-KMf" kind="relationship" relationship="rootViewController" id="Z0D-39-SBu"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="cwJ-Pi-Ixy" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-3755" y="1232"/>
+        </scene>
+        <!--Auth View Controller-->
+        <scene sceneID="PzO-x3-5Rd">
+            <objects>
+                <viewController id="I7h-uV-KMf" customClass="AuthViewController" customModule="ImageFeed" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="IWD-4j-Rve">
+                        <rect key="frame" x="0.0" y="0.0" width="430" height="932"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="authScreenLogo" translatesAutoresizingMaskIntoConstraints="NO" id="1Hq-f0-f1G">
+                                <rect key="frame" x="185" y="470.66666666666669" width="60" height="60.000000000000057"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="60" id="fSc-Fh-rPn"/>
+                                    <constraint firstAttribute="height" constant="60" id="iK9-q2-sfo"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="N3Z-mm-tPl" userLabel="loginButton">
+                                <rect key="frame" x="16" y="760" width="398" height="48"/>
+                                <color key="backgroundColor" name="ypWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="48" id="rsj-9e-zcB"/>
+                                </constraints>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" title="Войти">
+                                    <color key="titleColor" name="ypDark"/>
+                                </state>
+                                <connections>
+                                    <segue destination="M2M-5D-AjA" kind="show" identifier="ShowWebView" id="4pY-9m-Fxb"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="UbU-e6-jzl"/>
+                        <color key="backgroundColor" name="ypDark"/>
+                        <constraints>
+                            <constraint firstItem="1Hq-f0-f1G" firstAttribute="centerY" secondItem="UbU-e6-jzl" secondAttribute="centerY" id="0aM-Cg-yTZ"/>
+                            <constraint firstItem="1Hq-f0-f1G" firstAttribute="centerX" secondItem="UbU-e6-jzl" secondAttribute="centerX" id="XAb-La-tel"/>
+                            <constraint firstItem="N3Z-mm-tPl" firstAttribute="leading" secondItem="UbU-e6-jzl" secondAttribute="leading" constant="16" id="Zwg-X5-z0T"/>
+                            <constraint firstItem="UbU-e6-jzl" firstAttribute="trailing" secondItem="N3Z-mm-tPl" secondAttribute="trailing" constant="16" id="c56-ha-F1i"/>
+                            <constraint firstAttribute="bottom" secondItem="N3Z-mm-tPl" secondAttribute="bottom" constant="124" id="qGI-9k-yrK"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="7PU-Jt-jxW"/>
+                    <connections>
+                        <outlet property="loginButton" destination="N3Z-mm-tPl" id="Lzw-l8-Z9X"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="IMn-DV-mDn" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-2676" y="1232"/>
+        </scene>
+        <!--Web View View Controller-->
+        <scene sceneID="WDP-sf-uL1">
+            <objects>
+                <viewController id="M2M-5D-AjA" customClass="WebViewViewController" customModule="ImageFeed" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="ftw-Sp-dXp">
+                        <rect key="frame" x="0.0" y="0.0" width="430" height="932"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <wkWebView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PT2-Su-2rH">
+                                <rect key="frame" x="0.0" y="103" width="430" height="829"/>
+                                <color key="backgroundColor" name="ypWhite"/>
+                                <wkWebViewConfiguration key="configuration">
+                                    <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
+                                    <wkPreferences key="preferences"/>
+                                </wkWebViewConfiguration>
+                            </wkWebView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="Vwg-aD-MQh"/>
+                        <color key="backgroundColor" name="ypWhite"/>
+                        <constraints>
+                            <constraint firstItem="PT2-Su-2rH" firstAttribute="leading" secondItem="ftw-Sp-dXp" secondAttribute="leading" id="08U-Sa-9WY"/>
+                            <constraint firstAttribute="trailing" secondItem="PT2-Su-2rH" secondAttribute="trailing" id="FoM-Nb-bYd"/>
+                            <constraint firstItem="PT2-Su-2rH" firstAttribute="top" secondItem="Vwg-aD-MQh" secondAttribute="top" id="hpv-UH-0Yy"/>
+                            <constraint firstAttribute="bottom" secondItem="PT2-Su-2rH" secondAttribute="bottom" id="og0-Sh-qer"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="Osq-0t-8aC"/>
+                    <connections>
+                        <outlet property="webView" destination="PT2-Su-2rH" id="4Nb-ce-fKu"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="E6y-bl-QOr" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1720" y="1232"/>
+        </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="Ojt-oL-aQc">
             <objects>
@@ -228,6 +328,7 @@
     </scenes>
     <resources>
         <image name="0" width="1600" height="1059"/>
+        <image name="authScreenLogo" width="60" height="60"/>
         <image name="goBackButton" width="24" height="24"/>
         <image name="likeButtonOn" width="42" height="42"/>
         <image name="shareButton" width="51" height="51"/>
@@ -238,6 +339,9 @@
         </namedColor>
         <namedColor name="ypDark">
             <color red="0.10196078431372549" green="0.10588235294117647" blue="0.13333333333333333" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="ypWhite">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
