--- a/ImageFeed/Base.lproj/LaunchScreen.storyboard
+++ b/ImageFeed/Base.lproj/LaunchScreen.storyboard
@@ -16,7 +16,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Vector" translatesAutoresizingMaskIntoConstraints="NO" id="CIx-iM-Gv4">
-                                <rect key="frame" x="159" y="399.66666666666669" width="75" height="78"/>
+                                <rect key="frame" x="159" y="387" width="75" height="78"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="CIx-iM-Gv4" secondAttribute="height" multiplier="75:77.68" id="meo-iP-nv0"/>
                                 </constraints>
@@ -25,8 +25,8 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" red="0.10196078431372549" green="0.10588235294117647" blue="0.13333333333333333" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="CIx-iM-Gv4" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="5J5-kz-31F"/>
-                            <constraint firstItem="CIx-iM-Gv4" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="E4H-lW-DeX"/>
+                            <constraint firstItem="CIx-iM-Gv4" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="5J5-kz-31F"/>
+                            <constraint firstItem="CIx-iM-Gv4" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="E4H-lW-DeX"/>
                         </constraints>
                     </view>
                 </viewController>
