refactored according to code review

--- a/ImageFeed/Main.storyboard
+++ b/ImageFeed/Main.storyboard
@@ -137,7 +137,7 @@
                                             <rect key="frame" x="0.0" y="0.0" width="430" height="224"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zsc-u5-rig" userLabel="Gradient View">
+                                                <view contentMode="scaleAspectFit" translatesAutoresizingMaskIntoConstraints="NO" id="zsc-u5-rig" userLabel="Gradient View">
                                                     <rect key="frame" x="16" y="196" width="398" height="16"/>
                                                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                 </view>
